--- a/papermcio.jar.conf
+++ b/papermcio.jar.conf
@@ -5,9 +5,9 @@
 ## ===========================================================
 
 [config]
-name = PaperSpigot (recommended)
+name = Paper Latest - DJ
 source = https://papermc.io/api/v1/paper/1.16.4/latest/download
-configSource = https://raw.githubusercontent.com/hostinger/packages/master/multicraft/papermc.jar.conf
+configSource = https://raw.githubusercontent.com/JaegerSKITtles/tradi3mc/main/papermcio.jar.conf
 category = Latest version from PaperMc
 
 [encoding]
