--- a/papermcio.jar.conf
+++ b/papermcio.jar.conf
@@ -7,7 +7,7 @@
 [config]
 name = Paper Latest - DJ
 source = https://papermc.io/api/v1/paper/1.16.4/latest/download
-configSource = https://raw.githubusercontent.com/JaegerSKITtles/tradi3mc/main/papermcio.jar.conf
+configSource = https://raw.githubusercontent.com/JaegerSKITtles/tradi3mc/main/papermcio.jar.conf?token=AR72RMNKZUWRN5B2HRQLCYC7ZIAIC
 category = Latest version from PaperMc
 
 [encoding]
